# claude-code-verification

./: .gitignore  EVALUATION.md  LICENSE  README-en.md  README-ja.md  README-part2-ja.md  README-part2.md  README.md  pyproject.toml  requirements.txt
examples/: sample_spec.md
examples/fix_terms_example/: ambiguous_spec.md
examples/sample_code/: ml.py  phase.py
examples/scope_example/: spec.md
examples/wiring_example/: core.py  main.py
src/claude_code_verify/: __init__.py  cli.py
src/claude_code_verify/commands/: __init__.py  check_spec.py  clean_commits.py  enforce_scope.py  fix_terms.py  init_config.py  verify_wiring.py
src/claude_code_verify/core/: __init__.py  ast_analyzer.py  git_ops.py  spec_parser.py
templates/: numeric-check.md  standard-check.md  strict-mode.md  wiring-only.md
tests/: test_check_spec.py  test_clean_commits.py  test_enforce_scope.py  test_fix_terms.py  test_init_config.py  test_verify_wiring.py
