[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-verify"
version = "0.1.0"
description = "Verify and auto-fix Claude Code specifications at the spec layer"
authors = [
    { name = "Tomo-AI2025" }
]
readme = "README-part2.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["claude-code", "claude", "ai", "code-quality", "verification", "spec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "gitpython>=3.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
claude-code-verify = "claude_code_verify.cli:main"

[project.urls]
Homepage = "https://github.com/Tomo-AI2025/claude-code-verification"
Repository = "https://github.com/Tomo-AI2025/claude-code-verification"

[tool.setuptools.packages.find]
where = ["src"]
